--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body{
     6.8372%, 20.5116% { content: "Andreu"; }
 
     30.7674%, 51.2791% { content: ""; }
-    31.9070%, 50.1395% { content: "s"; }
-    33.0465%, 49.0000% { content: "st"; }
-    34.1860%, 47.8605% { content: "stu"; }
-    35.3256%, 46.7209% { content: "stud"; }
-    36.4651%, 45.5814% { content: "stude"; }
-    37.6047%, 44.4419% { content: "studen"; }
-    38.7442%, 43.3024% { content: "student"; }
+    31.9070%, 50.1395% { content: "d"; }
+    33.0465%, 49.0000% { content: "di"; }
+    34.1860%, 47.8605% { content: "dil"; }
+    35.3256%, 46.7209% { content: "dili"; }
+    36.4651%, 45.5814% { content: "dilig"; }
+    37.6047%, 44.4419% { content: "diligen"; }
+    38.7442%, 43.3024% { content: "diligent"; }
 
     54.6977%, 75.2093% { content: ""; }
     55.8372%, 74.0698% { content: "c"; }
